fix wizards and dialogs

--- a/WolvenKit/Views/Dialogs/DialogHostView.xaml
+++ b/WolvenKit/Views/Dialogs/DialogHostView.xaml
@@ -8,10 +8,11 @@
                              xmlns:controls="clr-namespace:AdonisUI.Controls;assembly=AdonisUI"
                              xmlns:reactiveUi="http://reactiveui.net"
                              mc:Ignorable="d"
-                             WindowStartupLocation="CenterScreen"
                              SizeToContent="WidthAndHeight"
                              IconVisibility="Collapsed"
                              PlaceTitleBarOverContent="True"
+                             
+                             WindowStartupLocation="Manual"
                              >
     <Grid>
         <reactiveUi:ViewModelViewHost x:Name="ViewModelViewHost"
