--- a/WolvenKit/Views/Dialogs/RenameDialog.xaml
+++ b/WolvenKit/Views/Dialogs/RenameDialog.xaml
@@ -5,11 +5,18 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:reactiveUi="http://reactiveui.net"
     xmlns:hc="https://handyorg.github.io/handycontrol"
-    xmlns:dialogs="clr-namespace:WolvenKit.ViewModels.Dialogs;assembly=WolvenKit.App">
+    xmlns:dialogs="clr-namespace:WolvenKit.ViewModels.Dialogs;assembly=WolvenKit.App"
+    xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
+    >
 
-    
 
-    <Grid>
+
+    <Grid
+        Margin="5,5,2,5"
+        HorizontalAlignment="Stretch"
+        VerticalAlignment="Stretch"
+        hc:ThemeManager.RequestedAccentColor="{DynamicResource MahApps.Brushes.Accent3}">
+
         <Grid.Resources>
             <ResourceDictionary>
                 <ResourceDictionary.MergedDictionaries>
@@ -20,32 +27,29 @@
         </Grid.Resources>
 
 
-        <TextBox
-            x:Name="TextBox"
-            Height="22"
-            Width="400"
-            Margin="0"
-            Padding="3,3,0,0"
-            VerticalAlignment="Center"
-            Background="Transparent"
-            BorderBrush="Transparent"
-            Style="{DynamicResource MahApps.Styles.TextBox.DataGrid.Editing}"
+        <syncfusion:WizardControl
+            CancelButtonCancelsWindow="True"
+            FinishButtonClosesWindow="True"
             >
-            
-        </TextBox>
+            <syncfusion:WizardPage
+                BackVisibility="Collapsed"
+                CancelVisibility="Visible"
+                FinishVisibility="Visible"
+                HelpVisibility="Collapsed"
+                NextVisibility="Collapsed"
+                PageType="Exterior"
+                >
+                <StackPanel Orientation="Vertical">
+                    <hc:TextBox
+                        x:Name="TextBox"
+                        Margin="0,35,0,0"
+                        Style="{StaticResource TextBoxExtend}"
+                        />
+                </StackPanel>
+                
 
-        <Grid Margin="0,50,0,0">
-            <Button
-                x:Name="ConfirmButton"
-                Width="150"
-                HorizontalAlignment="Right"
-                Content="Confirm"
-                />
-            <Button
-                x:Name="CancelButton"
-                Width="150"
-                HorizontalAlignment="Left"
-                Content="Cancel" />
-        </Grid>
+            </syncfusion:WizardPage>
+        </syncfusion:WizardControl>
+        
     </Grid>
 </reactiveUi:ReactiveUserControl>
