--- a/WolvenKit/Views/Dialogs/DialogHostView.xaml
+++ b/WolvenKit/Views/Dialogs/DialogHostView.xaml
@@ -1,4 +1,4 @@
-<controls:AdonisWindow x:Class="WolvenKit.Views.Dialogs.DialogHostView"
+<syncfusion:ChromelessWindow x:Class="WolvenKit.Views.Dialogs.DialogHostView"
                              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -9,14 +9,18 @@
                              xmlns:reactiveUi="http://reactiveui.net"
                              mc:Ignorable="d"
                              SizeToContent="WidthAndHeight"
-                             IconVisibility="Collapsed"
-                             PlaceTitleBarOverContent="True"
-                             
-                             WindowStartupLocation="Manual"
-                             >
+                             xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
+                             xmlns:syncfusionskin="clr-namespace:Syncfusion.SfSkinManager;assembly=Syncfusion.SfSkinManager.WPF"
+                             syncfusionskin:SfSkinManager.Theme="{syncfusionskin:SkinManagerExtension ThemeName=MaterialDark}"
+
+                             WindowStartupLocation="CenterOwner"
+>
     <Grid>
         <reactiveUi:ViewModelViewHost x:Name="ViewModelViewHost"
                                       HorizontalAlignment="Stretch"
-                                      VerticalAlignment="Stretch"/>
+                                      VerticalAlignment="Stretch"
+                                      HorizontalContentAlignment="Stretch"
+                                      VerticalContentAlignment="Stretch"
+                                      />
     </Grid>
-</controls:AdonisWindow>
+</syncfusion:ChromelessWindow>
